fix-responsive-root-overflow-H

--- a/src/styles/SocialMedia.module.css
+++ b/src/styles/SocialMedia.module.css
@@ -77,9 +77,9 @@ justify-content: center;
     font-size: 80px;
   }
   .wsp{
-    top:93.5%;
+    top:90.5%;
     width: 4%;
-    height: 6%;
+    height: 8%;
   }
 }
 
